--- a/pages/master-class.html
+++ b/pages/master-class.html
@@ -24,7 +24,7 @@
                 <button type="button" class="button button_type_link">куда пойти</button>
               </li>
               <li class="header__list-item">
-                <button type="button" class="button button_type_link" onclick="location.href='../pages/category.html';">стать участником</button>
+                <button type="button" class="button button_type_link" onclick="location.href='../index.html';">стать участником</button>
               </li>
               <li class="header__list-item">
                 <button type="button" class="button button_type_link">о фестивале</button>
