--- a/pages/master-class_Step3.html
+++ b/pages/master-class_Step3.html
@@ -114,6 +114,7 @@
           </div>
         </div>
       </main>
+      
       <footer class="footer">
         <div class="footer__container">
           <img class="footer__image" src="../images/footer_illustration.svg" alt="Ночлежка" />
@@ -121,10 +122,10 @@
             <h3 class="footer__title">организатор:</h3>
             <ul class="footer__links">
               <li>
-                <a class="footer__link" href="#">Ночлежка</a>
+                <a class="footer__link" href="https://homeless.ru/">Ночлежка</a>
               </li>
               <li>
-                <a class="footer__email" href="#">info@hedonismfest.ru</a>
+                <a class="footer__email" href="mailto:info@hedonismfest.ru">info@hedonismfest.ru</a>
               </li>
             </ul>
           </div>
@@ -132,13 +133,13 @@
             <h3 class="footer__title">сделано с любовью:</h3>
             <ul class="footer__links">
               <li>
-                <a class="footer__link" href="#">Fastsol Digital</a>
+                <a class="footer__link" href="https://fastsol.digital/">Fastsol Digital</a>
               </li>
               <li>
-                <a class="footer__link" href="#">shishki.collective</a>
+                <a class="footer__link" href="https://shishki.co/">shishki.collective</a>
               </li>
               <li>
-                <a class="footer__link" href="#">студентами Яндекс.Практикума</a>
+                <a class="footer__link" href="https://practicum.yandex.ru/">студентами Яндекс.Практикума</a>
               </li>
             </ul>
           </div>
@@ -146,17 +147,17 @@
             <h3 class="footer__title">мы в соцсетях:</h3>
             <ul class="footer__icons">
               <li class="footer__icon">
-                <a href="#">
+                <a href="https://www.facebook.com/Homeless.ru">
                   <img src="../images/footer_facebook-icon.svg" alt="Фейсбук" />
                 </a>
               </li>
               <li class="footer__icon">
-                <a href="#">
+                <a href="https://www.instagram.com/nochlezhka/">
                   <img src="../images/footer_instagram-icon.svg" alt="Инстаграмм" />
                 </a>
               </li>
               <li class="footer__icon">
-                <a href="#">
+                <a href="https://vk.com/club239781">
                   <img src="../images/footer_vk-icon.svg" alt="Вконтакте" />
                 </a>
               </li>
