--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="page">
       <header class="header">
         <div class="header__container">
-          <div class="header__bar-left">
+          <div class="header__bar-logo">
             <div class="header__logo"></div>
             <button type="button" class="button button_type_link button_place_header">
               <img src="./images/icon_location.svg" alt="геометка" class="button__icon" />
